--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -227,13 +227,14 @@ a = 20;  // TypeError: Assignment to constant variable.
 
 Sin embargo, en Javascript, **el término _constante_ puede llevar a engaño**. Para datos simples el comportamiento es el indicado anteriormente.
 
-Pero para datos complejos, como arrays y objetos, el significado es ligeramente distinto. Al igual que otros lenguajes, en Javascript cuando trabajamos con arrays y objetos, realmente estamos trabajando con referencias en memoria. **Para arrays y objetos lo que no puede modificarse es la referencia en memoria. Pero si es posible modificar elementos individuales dentro del array u objeto.** 
+Pero para datos complejos, como arrays y objetos, el significado es ligeramente distinto. Al igual que otros lenguajes, en Javascript cuando trabajamos con arrays y objetos, realmente estamos trabajando con referencias en memoria. **Para arrays y objetos lo que no puede modificarse es la referencia en memoria. Pero SÍ es posible modificar elementos individuales dentro del array u objeto.** 
 
 A continuación se muestran algunos ejemplos.
 
 
 ```javascript
 // Arrays
+//-----------------------------------------------------
 const b = [ 1, 2, 3];
 let   c = [ 7, 8, 9 ];
 
@@ -244,7 +245,9 @@ b = [ 4, 5, 6];                       // TypeError: Assignment to constant varia
 b[0] = 9;                             //  b = [ 9, 2, 3 ]
 
 
+
 // Objetos
+//-----------------------------------------------------
 const pepe = { nombre: 'Jose', edad: 40 }
 let   eva  = { nombre: 'Eva', edad: 22}
 
