--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -50,16 +50,50 @@ suma (2, 3);                                   // ahora sí puedo invocar la fun
 
 ## En un callback
 
+Un **callback** es una **función que es pasada como argumento a otra función**. Dos funciones muy conocidas en Javascript, que necesitan un callback son:
+
+
+```
+setTimeout  ( callback,  milisegundos);   // Ejecuta el callback una sola vez después de transcurridos los ms indicados
+setInverval ( callback,  milisegundos);   // Ejecuta el callback de forma recurrente cada cierto tiempo indicado en ms
+```
+
+**Ejemplo**
+
 ```javascript
-setTimeout ( /* función a ejecutar */,  /* milisegundos de espera */);
+// Función que usaremos para el callback. En este caso, NO es una función anónima.
+function hola(){
+  console.log ('Hola');
+}
 
-setTimeout ( function () { alert ('Hola') },  3000 );  
+// La función hola será pasada como callback.
+let t1 = setTimeout (hola, 5000);   // para cancelar ejecutamos clearTimeout (t1) antes del que el temporizador expire
+let t2 = setInverval(hola, 5000);   // para cancelar ejecutamos clearInterval (t2) en cualquier momento
+```
 
-function suma (a, b) {  alert ( a + b); }
+Una forma más compacta de escribir el código anterior es usando funciones anónimas:
+
+```javascript
+let t1 = setTimeout  ( function () { console.log ('Hola') },  5000 );  // Hacemos uso de función anónima
+let t2 = setInterval ( function () { console.log ('Hola') },  5000 );  // Hacemos uso de función anónima
+```
+
+El caso anterior se puede simplificar aún más haciendo uso de `funciones flecha (arrow functions)`:
+
+```javascript
+let t1 = setTimeout  ( () => console.log ('Hola') ,  5000 );  // Hacemos uso de función anónima
+let t2 = setInterval ( () => console.log ('Hola') ,  5000 );  // Hacemos uso de función anónima
+```
+
+Un caso específico a las funciones `setTimeout` y `setInterval` es que se le pueden pasar más argumentos. Todos los argumentos que aparezcan detrás de los milisegundos serán argumentos que serán pasados al callback. Por ejemplo, a continuación tenemos una función suma que utilizaremos como callback. Dicha función necesita dos argumentos para poder operar. Estos argumentos son los que escribimos como 3er y 4o argumento de `setTimeout`.
+
+```javascript
+// Función que usaremos para el callback
+function suma (a, b) {  console.log ( a + b); }
 
 setTimeout ( suma    // función a ejecutar
              , 3000  // milisegundos a esperar antes de ejecutar la función
-             , 2     // primer argumento de la función  
+             , 2     // primer argumento de la función 
              , 3     // segundo argumento de la función
            ) ;  
 ```
@@ -131,7 +165,8 @@ Existen 3 formas de ejecutar código de forma asíncrona.
 
 ## Callbacks
 
-Es la forma clásica y la más común.
+Es la forma clásica y es muy habitual. 
+
 
 ## Promesas
 
