--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -68,7 +68,7 @@ function hola(){
 
 // La función hola será pasada como callback.
 let t1 = setTimeout (hola, 5000);   // para cancelar ejecutamos clearTimeout (t1) antes del que el temporizador expire
-let t2 = setInverval(hola, 5000);   // para cancelar ejecutamos clearInterval (t2) en cualquier momento
+let t2 = setInterval(hola, 5000);   // para cancelar ejecutamos clearInterval (t2) en cualquier momento
 ```
 
 Una forma más compacta de escribir el código anterior es usando funciones anónimas:
