--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -165,7 +165,8 @@ Existen 3 formas de ejecutar código de forma asíncrona.
 
 ## Callbacks
 
-Es la forma clásica y es muy habitual. 
+Es la forma clásica.
+
 
 
 ## Promesas
@@ -178,6 +179,7 @@ Disponible a partir de ES7 (2016).
 
 
 
-# Referecias
+# Referencias
 
 - https://carlosazaustre.es/manejando-la-asincronia-en-javascript/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=Carlos%20Azaustre
+- https://medium.com/front-end-hacking/callbacks-promises-and-async-await-ad4756e01d90
