--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -469,13 +469,23 @@ document.getElementById('boton').addEventListener ('click', function(){
 Se utiliza para mostrar mensajes por consola.
 
 ```javascript
-console.clear ();
-console.log   ('Mensaje de log');
-console.info  ('Mensaje de información');
-console.warn  ('Mensaje de aviso');
-console.error ('Mensaje de error');
-console.debug ('Mensaje de depuración');
+
+let agenda = [
+  { nombre: 'José',  edad: 30 },
+  { nombre: 'Eva',   edad: 20 },
+  { nombre: 'Ana',   edad: 10 },
+  { nombre: 'Juana', edad: 18 }
+];
+
+console.clear ();                           // Limpia la consola
+console.log   ('Mensaje de log');           // Muestra mensaje de log
+console.info  ('Mensaje de información');   // Muestra mensaje de información
+console.warn  ('Mensaje de aviso');         // Muestra mensaje de aviso
+console.error ('Mensaje de error');         // Muestra mensaje de error
+console.debug ('Mensaje de depuración');    // Muestra mensaje de depuración
+console.table (agenda);                     // Muestra en forma de tabla. Sólo disponible para el navegador, no Nodejs
 ```
 
 > NOTA: **En NodeJS, el objeto console existe por si mismo**, es decir, en NodeJS no podemos escribir window.console.
+
 
