--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -1,2 +1,81 @@
 # Eventos
 
+En Javascript existen 3 formas de gestionar los eventos. De peor a mejor solución son:
+
+1. Mezclando código HTML y Javascript.
+2. Separando código HTML y Javascript y usando un método.
+3. Separando código HTML y Javascript y usando un escuchador de eventos. 
+
+A continuación se muestra el mismo ejemplo realizado de cada una de las formas antes indicadas.
+
+**Ejemplo 1**
+
+```javascript
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Eventos 1</title>
+</head>
+<body>
+  // El código return false evita que se ejecute el coportamiento por defecto
+  <a href="https://www.google.es" onclick=" alert ('Has pulsado en enlace de GOOGLE'); return false; "> GOOGLE </a>
+</body>
+</html>
+```
+
+**Ejemplo 2**
+```javascript
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Eventos 2</title>
+</head>
+<body>
+  <a id="enlace" href="https://www.google.es"> GOOGLE </a>
+
+<script>
+let enlace = document.querySelector('#enlace');
+
+enlace.onclick = function (event) {
+  alert ('Has pulsado en enlace de GOOGLE');
+  event.preventDefault();    // Evita que se ejecute el comportamiento por defecto
+}
+</script>
+
+</body>
+</html>
+```
+
+**Ejemplo 3**
+
+```javascript
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Eventos 2</title>
+</head>
+<body>
+  <a id="enlace" href="https://www.google.es"> GOOGLE </a>
+
+<script>
+let enlace = document.querySelector('#enlace');
+
+enlace.addEventListener('click', function (event) {
+  alert ('Has pulsado en enlace de GOOGLE');
+  event.preventDefault();    // Evita que se ejecute el comportamiento por defecto
+});
+
+</script>
+
+</body>
+</html>
+```
