--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -29,7 +29,7 @@ A continuación se muestra el mismo ejemplo realizado de cada una de las formas 
 **Ejemplo 2**
 ```javascript
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,12 +56,12 @@ enlace.onclick = function (event) {
 
 ```javascript
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Eventos 2</title>
+  <title>Eventos 3</title>
 </head>
 <body>
   <a id="enlace" href="https://www.google.es"> GOOGLE </a>
