--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -1,14 +1,18 @@
 # Eventos
 
-En Javascript existen 3 formas de gestionar los eventos. De peor a mejor solución son:
+En Javascript existen 3 formas de gestionar los eventos. De menos a más recomendado son:
 
-1. Mezclando código HTML y Javascript.
-2. Separando código HTML y Javascript y usando un método.
-3. Separando código HTML y Javascript y usando un escuchador de eventos. 
+1. Mezclando HTML y Javascript.
+2. Separando HTML y Javascript y usando un método.
+3. Separando HTML y Javascript y usando un escuchador de eventos. 
 
 A continuación se muestra el mismo ejemplo realizado de cada una de las formas antes indicadas.
 
 **Ejemplo 1**
+
+```javascript
+<elemento onclick=" /* hacer algo */ "> </elemento> 
+```
 
 ```javascript
 <!DOCTYPE html>
@@ -27,6 +31,11 @@ A continuación se muestra el mismo ejemplo realizado de cada una de las formas 
 ```
 
 **Ejemplo 2**
+
+```javascript
+elemento.onclick = function() { /* hacer algo */ }
+```
+
 ```javascript
 <!DOCTYPE html>
 <html lang="es">
@@ -53,6 +62,10 @@ enlace.onclick = function (event) {
 ```
 
 **Ejemplo 3**
+
+```javascript
+elemento.addEventListener('click', function(){ /* hacer algo */ }, false);
+```
 
 ```javascript
 <!DOCTYPE html>
