--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -6,7 +6,7 @@ En Javascript existen 3 formas de gestionar los eventos. De menos a más recomen
 2. Separando HTML y Javascript y usando un método.
 3. Separando HTML y Javascript y usando un escuchador de eventos. 
 
-A continuación se muestra el mismo ejemplo realizado de cada una de las formas antes indicadas.
+A continuación se muestra el mismo ejemplo realizado en cada una de estas formas.
 
 **Ejemplo 1**
 
