--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -11,7 +11,7 @@ A continuación se muestra el mismo ejemplo realizado en cada una de estas forma
 **Ejemplo 1**
 
 ```javascript
-<elemento onclick=" /* hacer algo */ "> </elemento> 
+<elemento onclick=" /* hacer algo */ ">    </elemento> 
 ```
 
 ```javascript
@@ -64,7 +64,7 @@ enlace.onclick = function (event) {
 **Ejemplo 3**
 
 ```javascript
-elemento.addEventListener('click', function(){ /* hacer algo */ }, false);
+elemento.addEventListener('click', function(){ /* hacer algo */ } );
 ```
 
 ```javascript
