--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -25,7 +25,8 @@ A continuación se muestra el mismo ejemplo realizado en cada una de estas forma
 </head>
 <body>
   // El código return false evita que se ejecute el coportamiento por defecto
-  <a href="https://www.google.es" onclick=" alert ('Has pulsado en enlace de GOOGLE'); return false; "> GOOGLE </a>
+  <a href="https://www.google.es" 
+     onclick=" alert ('Has pulsado en enlace de GOOGLE'); return false; "> GOOGLE </a>
 </body>
 </html>
 ```
