--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -1,6 +1,6 @@
 # Eventos
 
-En Javascript existen 3 formas de gestionar los eventos. De menos a más recomendado son:
+En Javascript existen 3 formas de gestionar los eventos. De menos a más recomendada tenemos:
 
 1. Mezclando HTML y Javascript.
 2. Separando HTML y Javascript y usando un método.
@@ -93,3 +93,12 @@ enlace.addEventListener('click', function (event) {
 </body>
 </html>
 ```
+
+## Resumen
+
+La primera forma está desaconsejada, prácticamente está obsoleta.
+
+La segunda forma es simple y está soportada por la mayoría, sino todos, los navegadores.
+
+La tercera forma tiene peor soporte que la anterior, pero esto está mejorando rápidamente debido a la continua actualización de los navegadores actuales. Las principales ventajas de la tercera forma son que puedes eliminar el código del controlador de eventos si es necesario, utilizando `removeEventListener ()`, y puedes agregar múltiples escuchadores del mismo tipo a los elementos si es necesario. Por ejemplo, puedes llamar a `addEventListener ('click', function () {...})` en un elemento varias veces, con diferentes funciones especificadas en el segundo argumento. Esto es imposible de realizar con la segunda forma porque cualquier intento posterior de establecer una propiedad sobrescribirá las anteriores.
+
