--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -94,6 +94,45 @@ enlace.addEventListener('click', function (event) {
 </html>
 ```
 
+El mismo ejemplo anterior con varios escuchadores en un mismo evento. 
+
+```javascript
+
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Eventos 3</title>
+</head>
+<body>
+  <a id="enlace" href="https://www.google.es"> GOOGLE </a>
+
+<script>
+let enlace = document.querySelector('#enlace');
+
+enlace.addEventListener('click', function (event) {
+  alert ('Has pulsado en enlace de GOOGLE');
+});
+
+enlace.addEventListener('click', function (event) {
+  alert ('Ya te he dicho que has pulsado el enlace de GOOGLE,¿no?');
+});
+
+enlace.addEventListener('click', function (event) {
+  if (!confirm ('¿Deseas acceder a esta página?') )
+    event.preventDefault();     // Evita que se ejecute el comportamiento por defecto
+});
+</script>
+
+</body>
+</html>
+```
+
+
+
 ## Resumen
 
 La primera forma está desaconsejada, prácticamente está obsoleta.
