--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -101,6 +101,54 @@ fetch ('https://api.github.com/users/jamj2000/following')
   .then( jsonData => console.log(jsonData));
  ``` 
  
+```html
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Gatos 1</title>
+</head>
+<body>
+  <button id='go'>Otra foto</button><br>
+  <img id="foto" width='400'/>
+
+  <script>
+  document.getElementById('go').addEventListener('click',  function () {
+    fetch ('https://aws.random.cat/meow')
+      .then ( response => response.json())
+      .then ( jsonData => document.getElementById('foto').src = jsonData.file );      
+  });  
+  </script>
+</body>  
+</html>
+```
+
+```html
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Gatos 2</title>
+</head>
+<body>
+  <button id="go">Iniciar</button><br>
+  <img id="foto" width="400"/>
+
+  <script>
+  function mostrar_gatito () {
+    fetch ('https://aws.random.cat/meow')
+      .then ( response => response.json())
+      .then ( jsonData => document.getElementById('foto').src = jsonData.file );
+  }
+  document.getElementById('go').addEventListener('click',  function () {
+    this.style.display = 'none';
+    setInterval (mostrar_gatito, 3000);      
+  });
+  </script>
+</body>  
+</html>
+```
+
 
 ## Referencias
 
