--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -141,6 +141,7 @@ fetch ('https://api.github.com/users/jamj2000/following')
       .then ( jsonData => document.getElementById('foto').src = jsonData.file );
   }
   document.getElementById('go').addEventListener('click',  function () {
+    //  this.disabled = 'true';
     this.style.display = 'none';
     setInterval (mostrar_gatito, 3000);      
   });
