--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -11,7 +11,7 @@ Para realizar peticiones asíncronas y obtener datos desde un servidor podemos h
 
 Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso desde un dominio distinto, un protocolo o un puerto diferente al del documento que lo generó. Ciertas peticiones de origen cruzado, más notablemente peticiones Ajax, están prohibidas por defecto por la política de seguridad del mismo origen (same-origin security policy, en inglés).
 
-> NOTA: La mayoría de los servidores no indican nada respecto a **CORS** (Cross-Origin Resource Sharing - Uso compartido de recursos de origen cruzado). Por tanto, las peticiones AJAX de distinto origen no están permitidas.
+> NOTA: La mayoría de los servidores no indican nada respecto a **CORS** (**Cross-Origin Resource Sharing** - Uso compartido de recursos de origen cruzado). Por tanto, las peticiones AJAX de distinto origen no están permitidas.
 >
 > Podemos ver si un servidor tiene activada dicha característica con el comando siguiente de bash. 
 >```bash
@@ -132,7 +132,7 @@ fetch ('https://api.github.com/users/jamj2000/following')
 </head>
 <body>
   <button id="go">Iniciar</button><br>
-  <img id="foto" width="400"/>
+  <img id="foto" height="400"/>
 
   <script>
   function mostrar_gatito () {
