--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -155,3 +155,4 @@ fetch ('https://api.github.com/users/jamj2000/following')
 
 - [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
 - [CORS](https://developer.mozilla.org/es/docs/Web/HTTP/Access_control_CORS)
+- [APIs públicas](https://github.com/toddmotto/public-apis)
