--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -93,7 +93,7 @@ xhr.send();
 
 El método **fetch** nos proporciona una forma más moderna de hacer peticiones asíncronas, en la cual trabajamos con promesas (Promises).
 
-**Ejemplo**
+**Ejemplo 1**
 
 ```javascript
 fetch ('https://api.github.com/users/jamj2000/following')
@@ -101,6 +101,7 @@ fetch ('https://api.github.com/users/jamj2000/following')
   .then( jsonData => console.log(jsonData));
  ``` 
  
+**Ejemplo 2**
 ```html
 <html>
 <head>
@@ -123,6 +124,7 @@ fetch ('https://api.github.com/users/jamj2000/following')
 </html>
 ```
 
+**Ejemplo 3**
 ```html
 <html>
 <head>
