--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -152,6 +152,43 @@ fetch ('https://api.github.com/users/jamj2000/following')
 </html>
 ```
 
+**Ejemplo 4**
+
+Para el siguiente ejemplo, necesitarás obtener una API Key desde https://thedogapi.com.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Perros</title>
+</head>
+<body>
+  <button id="go">Iniciar</button><br>
+  <img id="foto" />
+
+  <script>
+  function mostrar_perrito () {
+    fetch ('https://api.thedogapi.com/v1/images/search?size=small&mime_types=jpg&format=json',
+          {          
+           headers: {
+             'Content-Type': 'application/json',
+             'x-api-key': 'YOUR-API-KEY' 
+           }          
+          })
+      .then ( response => response.json())
+      .then ( jsonData => document.getElementById('foto').src = jsonData[0].url );
+  }
+  document.getElementById('go').addEventListener('click',  function () {
+    //  this.disabled = 'true';
+    this.style.display = 'none';
+    setInterval (mostrar_perrito, 3000);      
+  });
+  </script>
+</body>
+</html>
+```
 
 ## Referencias
 
