--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -157,6 +157,12 @@ Utilizada frecuentemente en operaciones de Entrada/Salida:
 - Lectura y escritura de información en base de datos (**E/S base de datos**)
 - Envío y recepción de información en red (**E/S red**)
 
+La ejecución asíncrona es el método que nos permite solicitar a un agente externo la realización de una operación y, mientras esperamos su respuesta, seguimos con la ejecución del resto de nuestro código.
+Es habitual, cuando llega la respuesta, que puede ser de éxito o de error, detener momentánemente las operaciones que estabamos haciendo y ejecutar cierto código de tratamiento de la respuesta. Este código de tratamiento se ejecuta de forma asíncrona, puesto que no sabemos el momento en el que recibiremos la respuesta.
+
+![Ejecuciones síncrona y asíncrona](img/sync-async.png)
+
+
 Existen 3 formas de ejecutar código de forma asíncrona. 
 
 - Callbacks
@@ -165,13 +171,81 @@ Existen 3 formas de ejecutar código de forma asíncrona.
 
 ## Callbacks
 
-Es la forma clásica.
+Es la forma clásica. Aún así esta forma todavía es ampliamente usada.
 
+
+
+
+**Ejemplo**
+
+Una misma método puede definir más de un callback. A continuación el método `getCurrentPosition` con 2 callbacks. Se muestran 3 formas de uso.
+
+*Forma 1: con funciones con nombre*
+```javascript
+if ("geolocation" in navigator) {
+  navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+} else {
+  console.log ("No hay soporte de GPS");
+}
+
+function successCallback (pos) {
+  console.log(pos.coords.latitude, pos.coords.longitude);
+}
+
+function errorCallback (error) {
+  console.log('ERROR(' + error.code + '): ' + error.message);
+}
+```
+
+*Forma 2: con funciones anónimas*
+```javascript
+if ("geolocation" in navigator) {
+  navigator.geolocation.getCurrentPosition(
+     function (pos) { console.log( pos.coords.latitude, pos.coords.longitude); }
+     , function (err) { console.log('ERROR(' + err.code + '): ' + err.message); }
+  );
+} else {
+  console.log ("No hay soporte de GPS");
+}
+```
+
+*Forma 3: con arrow functions*
+```javascript
+if ("geolocation" in navigator) {
+  navigator.geolocation.getCurrentPosition(
+       (pos) => console.log( pos.coords.latitude, pos.coords.longitude)
+     , (err) => console.log('ERROR(' + err.code + '): ' + err.message)
+  );
+} else {
+  console.log ("No hay soporte de GPS");
+}
+```
+
+
+El inconveniente principal que tiene es que cuando necesitamos realizar varias operaciones asíncronas una tras otra, el código se sangra muy hacia la derecha, provocando lo que se conoce como [callback hell](https://codearmy.co/que-es-el-callback-hell-y-como-evitarlo-4af418a6ed14) y provocando que su legibilidad disminuya.
+
+```javascript
+setTimeout(function () {
+    console.log('Este es el primer mensaje');
+    setTimeout(function () {
+        console.log('Este es el segundo mensaje');
+        setTimeout(function () {
+            console.log('Este es el tercer mensaje');
+            setTimeout ( function () {
+                console.log('Este es el cuarto mensaje');
+            }, 800);
+        }, 2000);
+    }, 1500);
+}, 1000);
+```
 
 
 ## Promesas
 
-Disponible a partir de ES6 (2015).
+Disponible a partir de ES6 (2015). La estructura del código es más clara que el uso de callbacks.
+
+
+
 
 ## async / await
 
