--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -171,67 +171,91 @@ Existen 3 formas de ejecutar código de forma asíncrona.
 
 ## Callbacks
 
-Es la forma clásica. Aún así esta forma todavía es ampliamente usada.
+Es la forma clásica, todavía ampliamente usada.
 
+Cuando usamos callbacks el código tiene la siguiente forma:
 
-
-
-**Ejemplo**
-
-Una misma método puede definir más de un callback. A continuación el método `getCurrentPosition` con 2 callbacks. Se muestran 3 formas de uso.
-
-*Forma 1: con funciones con nombre*
 ```javascript
-if ("geolocation" in navigator) {
-  navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
-} else {
-  console.log ("No hay soporte de GPS");
+hazAlgo (exitoCallback);
+```
+
+**Ejemplo 1**
+```javascript
+function callback (pos) {
+    console.log (pos.coords.latitude, pos.coords.longitude);
 }
 
+if ("geolocation" in navigator) {
+    navigator.geolocation.getCurrentPosition (callback);
+} else {
+    console.log ("No hay soporte de GPS");
+}
+```
+
+
+Otras veces podemos encontrar la siguiente forma:
+
+```javascript
+hazAlgo (exitoCallback, falloCallback);
+```
+
+
+**Ejemplo 2**
+
+Un mismo método o función puede definir más de un callback. A continuación el método `getCurrentPosition` con 2 callbacks. Se muestran 3 formas de uso.
+
+*Forma 1: con funciones nominadas*
+```javascript
 function successCallback (pos) {
-  console.log(pos.coords.latitude, pos.coords.longitude);
+    console.log (pos.coords.latitude, pos.coords.longitude);
 }
 
 function errorCallback (error) {
-  console.log('ERROR(' + error.code + '): ' + error.message);
+    console.log ('ERROR(' + error.code + '): ' + error.message);
+}
+
+if ("geolocation" in navigator) {
+    navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+} else {
+    console.log ("No hay soporte de GPS");
 }
 ```
 
 *Forma 2: con funciones anónimas*
 ```javascript
 if ("geolocation" in navigator) {
-  navigator.geolocation.getCurrentPosition(
-     function (pos) { console.log( pos.coords.latitude, pos.coords.longitude); }
-     , function (err) { console.log('ERROR(' + err.code + '): ' + err.message); }
-  );
+    navigator.geolocation.getCurrentPosition(
+       function (pos) { console.log( pos.coords.latitude, pos.coords.longitude); }
+       , function (err) { console.log('ERROR(' + err.code + '): ' + err.message); }
+    );
 } else {
-  console.log ("No hay soporte de GPS");
+    console.log ("No hay soporte de GPS");
 }
 ```
 
-*Forma 3: con arrow functions*
+*Forma 3: con funciones flecha*
 ```javascript
 if ("geolocation" in navigator) {
-  navigator.geolocation.getCurrentPosition(
-       (pos) => console.log( pos.coords.latitude, pos.coords.longitude)
-     , (err) => console.log('ERROR(' + err.code + '): ' + err.message)
-  );
+    navigator.geolocation.getCurrentPosition(
+        (pos) => console.log( pos.coords.latitude, pos.coords.longitude)
+        , (err) => console.log('ERROR(' + err.code + '): ' + err.message)
+    );
 } else {
-  console.log ("No hay soporte de GPS");
+    console.log ("No hay soporte de GPS");
 }
 ```
 
 
-El inconveniente principal que tiene es que cuando necesitamos realizar varias operaciones asíncronas una tras otra, el código se sangra muy hacia la derecha, provocando lo que se conoce como [callback hell](https://codearmy.co/que-es-el-callback-hell-y-como-evitarlo-4af418a6ed14) y provocando que su legibilidad disminuya.
+El inconveniente principal que tiene es que cuando necesitamos realizar varias operaciones asíncronas una tras otra, el código se sangra muy hacia la derecha, provocando lo que se conoce como [callback hell](https://codearmy.co/que-es-el-callback-hell-y-como-evitarlo-4af418a6ed14) y empeorando su legibilidad.
 
 ```javascript
-setTimeout(function () {
+setTimeout (function () {
     console.log('Este es el primer mensaje');
-    setTimeout(function () {
+    setTimeout (function () {
         console.log('Este es el segundo mensaje');
-        setTimeout(function () {
+        setTimeout (function () {
             console.log('Este es el tercer mensaje');
-            setTimeout ( function () {
+            setTimeout (function () {
                 console.log('Este es el cuarto mensaje');
             }, 800);
         }, 2000);
@@ -239,12 +263,150 @@ setTimeout(function () {
 }, 1000);
 ```
 
+**ATENCIÓN: El código anterior no es igual al mostrado a continuación.**
+
+```javascript
+setTimeout(function () { console.log('Este es el primer mensaje') }, 1000);
+setTimeout(function () { console.log('Este es el segundo mensaje')}, 1500);
+setTimeout(function () { console.log('Este es el tercer mensaje') }, 2000);
+setTimeout(function () { console.log('Este es el cuarto mensaje') },  800);
+```
+
 
 ## Promesas
 
 Disponible a partir de ES6 (2015). La estructura del código es más clara que el uso de callbacks.
 
+Algunos métodos soportan el uso de promesas. 
 
+**Una promesa (Promise) es un objeto que representa la terminación o el fracaso eventual de una operación asíncrona.** Por tanto es un valor que será devuelto en un futuro. 
+
+Cuando usamos promesas el código tiene la siguiente forma:
+
+```javascript
+hazAlgo ()
+.then (exitoCallback)
+.catch (falloCallback);
+```
+
+**Ejemplo 1**
+
+*Forma 1: con funciones nominadas*
+```javascript
+var URL = 'https://api.github.com/users/jamj2000';
+
+function callback(response)  {
+    console.log (response);
+}
+
+function error(err) {
+    console.log(`Error devuelto: ${err.code} - ${err.message}`);
+}
+
+fetch(URL)
+  .then(callback)
+  .catch(error);
+```
+
+Explicación del código anterior:
+
+- El método `fetch` nos permite obtener un recurso de red de forma asíncrona. 
+- Este método devuelve un objeto de la clase (Promise), es decir una promesa. 
+- Los objetos de la clase Promise disponen de dos métodos:
+  - `then` cuando la **promesa se resuelve de forma satisfactoria (resolved) o no satisfactoria (rejected)**. 
+  - `catch` cuando la **promesa no puede resolverse**.
+
+En este caso pueden darse 3 situaciones:
+
+- Tenemos conexión a Internet y la URL https://api.github.com/users/jamj2000 existe. **La promesa se resuelve de forma satisfactoria**.
+  `Response {type: "cors", url: "https://api.github.com/users/jamj2000", redirected: false,` **`status: 200, ok: true`**, `…}`
+- Tenemos conexión a Internet y la URL https://api.github.com/jamj2000 no existe. **La promesa se resuelve de forma no satisfactoria**.
+  `Response {type: "cors", url: "https://api.github.com/jamj2000", redirected: false,` **`status: 404, ok: false`**, `…}`
+- No tenemos conexión a Internet. **La promesa no puede resolverse**.
+  `Error devuelto: undefined - Failed to fetch`
+
+
+*Forma 2: con funciones anónimas*
+
+```javascript
+var URL = 'https://api.github.com/users/jamj2000';
+
+fetch(URL)
+  .then(function(response) {
+    console.log (response);
+  })
+  .catch(function(error) {
+    console.log(`Error devuelto: ${error.code} - ${error.message}`);
+  });
+```
+
+*Forma 3: con funciones flecha*
+
+```javascript
+var URL = 'https://api.github.com/users/jamj2000';
+
+fetch(URL)
+  .then((response) =>  console.log (response))
+  .catch((error) => console.log(`Error devuelto: ${error.code} - ${error.message}`));
+```
+
+Es posible distinguir cuando una promesa de resuelve de forma satisfactoria (resolved) y se resuelve de forma no satisfactoria. La forma que adquiere el código tiene la siguiente forma: 
+
+```javascript
+hazAlgo ()
+.then (exitoCallbackResolve, exitoCallbackReject)
+.catch (falloCallback);
+```
+
+**Ejemplo 2**
+
+
+*Forma 1: con funciones nominadas*
+```
+var URL = 'https://api.github.com/users/jamj2000';
+
+// En este ejemplo las 2 funciones siguientes se comportan de la misma manera
+function exitoCallbackResolve (res) {
+    console.log (res.status);
+}
+
+function exitoCallbackReject (res) {
+    console.log (res.status);
+}
+
+function error (err) {
+    console.log(`Error devuelto: ${error.code} - ${error.message}`);
+}
+
+fetch(URL)
+  .then(exitoCallbackResolve, exitoCallbackReject)
+  .catch(error);
+```
+
+*Forma 2: con funciones anónimas*
+```
+var URL = 'https://api.github.com/users/jamj2000';
+
+fetch(URL)
+  .then(function(resolve) {
+    console.log (resolve.status);
+  },
+  function(reject) {
+    console.log (reject.status);
+  })
+    .catch(function(error) {
+    console.log(`Error devuelto: ${error.code} - ${error.message}`);
+  });
+```
+
+*Forma 3: con funciones flecha*
+```
+var URL = 'https://api.github.com/users/jamj2000';
+
+fetch(URL)
+  .then((resolve) => console.log (resolve.status) , (reject) => console.log (reject.status) )
+  .catch((error) => console.log(`Error devuelto: ${error.code} - ${error.message}`));
+```
 
 
 ## async / await
