--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -362,7 +362,7 @@ hazAlgo ()
 
 
 *Forma 1: con funciones nominadas*
-```
+```javascript
 var URL = 'https://api.github.com/users/jamj2000';
 
 // En este ejemplo las 2 funciones siguientes se comportan de la misma manera
@@ -384,7 +384,7 @@ fetch(URL)
 ```
 
 *Forma 2: con funciones anónimas*
-```
+```javascript
 var URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
@@ -400,7 +400,7 @@ fetch(URL)
 ```
 
 *Forma 3: con funciones flecha*
-```
+```javascript
 var URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
@@ -411,8 +411,96 @@ fetch(URL)
 
 ## async / await
 
-Disponible a partir de ES7 (2016).
+Disponible a partir de ES7 (2016). Todavía se usa poco.
 
+Se puede declarar una función como `async`. Las funciones `async` son esencialmente una forma más limpia de trabajar con código asíncrono en JavaScript. 
+
+Las funciones `async` pueden hacer uso de la expresión `await`. Esta expresión se antepone antes de la llamada a una función que devuelve una Promesa. Así se pausará la función `async` y esperará a que la Promesa se resuelva antes de continuar. 
+
+```javascript
+async function hazAlgo () {
+  ...
+  await esperaQueAcabeYoAntesDeSeguir();
+  ...  
+};
+```
+
+**Ejemplo 1**
+
+```javascript
+var URL = 'https://api.github.com/users/jamj2000';
+
+async function mostrar() {
+  console.log("Inicio de recuperación de datos");
+
+  await fetch(URL)
+    .then((resolve) => console.log(resolve.status), (reject) => console.log(reject.status))
+    .catch((error) => console.log(`Error devuelto: ${error.code} - ${error.message}`));
+
+  console.log("Finalización de recuperación de datos");
+}
+
+mostrar();
+```
+
+
+Resultado:
+
+```
+Inicio de recuperación de datos
+Promise {<pending>}
+200
+Finalización de recuperación de datos
+```
+
+Si el código hubiera sido:
+
+```javascript
+var URL = 'https://api.github.com/users/jamj2000';
+
+function mostrar() {
+  console.log("Inicio de recuperación de datos");
+
+  fetch(URL)
+    .then((resolve) => console.log(resolve.status), (reject) => console.log(reject.status))
+    .catch((error) => console.log(`Error devuelto: ${error.code} - ${error.message}`));
+
+  console.log("Finalización de recuperación de datos");
+}
+
+mostrar();
+```
+
+El resultado habría sido:
+
+```
+Inicio de recuperación de datos
+Finalización de recuperación de datos
+undefined
+200
+```
+
+**Ejemplo 2**
+
+```javascript
+async function mensajes() {
+  await mostrar('Este es el primer mensaje', 1000);
+  await mostrar('Este es el segundo mensaje', 1500);
+  await mostrar('Este es el tercer mensaje', 2000);
+  await mostrar('Este es el cuarto mensaje', 800);
+}
+
+// Debe devolver una promesa, puesto que se va a usar dentro de una función async
+function mostrar(mensaje, msEspera) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      console.log(mensaje.toUpperCase()); resolve();
+    }, msEspera)
+  });
+}
+
+mensajes();
+```
 
 
 # Referencias
