--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -423,6 +423,9 @@ Métodos interesantes son:
 - querySelector
 - getAttribute
 - setAttribute
+
+Propiedades interesantes son:
+
 - textContent
 - innerHTML
 - value ( utilizado para inputs )
