--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -88,6 +88,7 @@ console.log ( "El cubo de 'x' es " + Math.pow(x,3) + " unidades" );
 
 ## Texto Unicode
 
+(Por elaborar)
 
 ## Conversión entre texto y números
 
