--- a/07.PLUS.md
+++ b/07.PLUS.md
@@ -190,6 +190,10 @@ Para el siguiente ejemplo, necesitarás obtener una API Key desde https://thedog
 </html>
 ```
 
+### Más 
+
+(https://flaviocopes.com)
+
 ## Referencias
 
 - [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
