--- a/08.BIBLIOTECAS.md
+++ b/08.BIBLIOTECAS.md
@@ -1,2 +1,54 @@
-# BIBLIOTECAS
+# Bibliotecas y Frameworks
 
+## Three.js
+
+Framework construido sobre WebGL que facilita la **creación de gráficos 3D** en el navegador, utiliza un canvas + WebGL para mostrar la escena 3D.
+
+### Sitio oficial:
+
+- https://threejs.org/
+
+### Ejemplos:
+
+- https://dddance.party/
+- http://vr.ff.com/us/
+- http://carvisualizer.plus360degrees.com/threejs/
+
+## D3.js
+
+Biblioteca de **visualización de datos**. Facilita la generación y modificación de gráficos basados en datos. 
+
+### Sitio oficial:
+
+- https://d3js.org/
+
+### Ejemplos:
+
+- https://www.christophermanning.org/projects/building-cubic-hamiltonian-graphs-from-lcf-notation
+- https://bost.ocks.org/mike/nations/
+- https://bl.ocks.org/kerryrodden/7090426
+
+### Galería
+
+- https://github.com/d3/d3/wiki/Gallery
+
+## p5.js
+
+Framework de JavaScript de código abierto que hace que la creación de **medios visuales** con código en la web sea accesible para **artistas, diseñadores, educadores y principiantes**. Lauren McCarthy creó p5.js como alternativa nativa de JavaScript a [Processing](https://processing.org/). Prácticamente todo lo que puede hacerse en Processing también puede hacerse con p5.js.
+
+### Sitio oficial:
+
+- https://p5js.org/es
+
+### Ejemplos:
+
+- https://p5js.org/examples/3d-sine-cosine-in-3d.html
+
+### Free OnLine Course
+
+Curso de **programación creativa**. Hace uso de Processing, pero puede aplicarse a p5.js.
+
+- [Video de introdución al curso](https://view.vzaar.com/1569932/video/hd)
+- https://www.futurelearn.com/courses/creative-coding 
+
+Existe un [grupo en Flickr](https://www.flickr.com/groups/2615752@N24/pool/) donde los alumnos de este curso publican las imágenes y animaciones generadas por ordenador usando Processing.
