--- a/08.BIBLIOTECAS.md
+++ b/08.BIBLIOTECAS.md
@@ -38,11 +38,22 @@ Framework de JavaScript de código abierto que hace que la creación de **medios
 
 ### Sitio oficial:
 
-- https://p5js.org/es
+- https://p5js.org
+- https://editor.p5js.org/p5/sketches  (Sketches en editor on-line)
 
 ### Ejemplos:
 
-- https://p5js.org/examples/3d-sine-cosine-in-3d.html
+- https://editor.p5js.org/p5/sketches/Hybb4ekmum
+- https://editor.p5js.org/p5/sketches/SJYyEgyX_X
+- https://editor.p5js.org/p5/sketches/B1QefNeyQuX
+- https://editor.p5js.org/p5/sketches/HyeH4xJmOQ 
+- https://editor.p5js.org/p5/sketches/S1xN4x1muQ
+- https://editor.p5js.org/p5/sketches/BkZ14x1QdQ
+- https://editor.p5js.org/p5/sketches/rkqGNeJXum
+- https://editor.p5js.org/p5/sketches/HyvQNlymu7
+- https://editor.p5js.org/p5/sketches/BkNgxEly7uQ
+- https://editor.p5js.org/p5/sketches/SJngVlJQO7
+- https://editor.p5js.org/p5/sketches/SkelbNeJ7um
 
 ### Free OnLine Course
 
