--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -1,7 +1,4 @@
-
-# Otras características
-
-## AJAX (Asynchronous JavaScript And XML)
+# AJAX (Asynchronous JavaScript And XML)
 
 Para realizar peticiones asíncronas y obtener datos desde un servidor podemos hacer uso de 3 técnicas:
 
@@ -26,7 +23,7 @@ Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso d
 
 
 
-### XMLHttpRequest
+## XMLHttpRequest
 
 Cuando apareció por primera vez la clase XMLHttpRequest, ésta estaba orientada a la petición de datos en formato XML, JSON o HTML.
 
@@ -44,7 +41,7 @@ xhr.send();
 ```
 
 
-### XMLHttpRequest 2
+## XMLHttpRequest 2
 
 Con la versión 2 además se pueden hacer petición de datos binarios (**blob** - Binary Large OBjects). Además con esta versión se simplifica la forma de uso.
 
@@ -89,7 +86,7 @@ xhr.send();
 ```
 
 
-### fetch
+## fetch
 
 El método **fetch** nos proporciona una forma más moderna de hacer peticiones asíncronas, en la cual trabajamos con promesas (Promises).
 
@@ -190,9 +187,7 @@ Para el siguiente ejemplo, necesitarás obtener una API Key desde https://thedog
 </html>
 ```
 
-### Más 
 
-(https://flaviocopes.com)
 
 ## Referencias
 
