--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -92,6 +92,7 @@ console.log ( "El cubo de 'x' es " + Math.pow(x,3) + " unidades" );
 (https://flaviocopes.com/javascript-unicode) 
 (https://unicode.org/emoji/charts/full-emoji-list.html)
 
+
 ## Conversión entre texto y números
 
 ```javascript 
@@ -174,6 +175,45 @@ a[2]   // true
 for (var i in a)  console.log (i + " ---> " + a[i]);
 ```
 
+### Array ⇄ String
+
+**join**
+
+Es frecuente realizar conversiones de un **Array a String**. Para ello se aplica el método **join** al array.
+
+```javascript
+var array = ['Tierra', 'Mar', 'Aire'];
+
+var texto = array.join (' y ');
+
+console.log (texto);   // Tierra y Mar y Aire
+```
+
+```javascript
+// todo en una sola línea
+
+console.log (   ['Tierra', 'Mar', 'Aire'].join(' y ')   );   // Tierra y Mar y Aire
+```
+
+Si el método join no recibe ningún parámetro entonces la separación se realiza mediante comas.
+
+**split**
+
+También es frecuente realizar conversiones de un **String a Array**. Para ello se aplica el método **split** al string.
+
+```javascript
+var texto = 'Tierra y Mar y Aire';
+var array = texto.split (' y ');
+
+console.log (array);   // ["Tierra", "Mar", "Aire"]
+```
+
+```javascript
+// todo en una sola línea
+
+console.log (   'Tierra y Mar y Aire'.split(' y ')   );   // ["Tierra", "Mar", "Aire"]
+```
+
 
 ## Objetos
 
@@ -195,7 +235,6 @@ persona.altura   // 170
 // para mostrarlas por pantalla con bucle for in
 for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
-
 
 # Declaración de variables
 
