--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -179,7 +179,7 @@ for (var i in a)  console.log (i + " ---> " + a[i]);
 
 **join**
 
-Es frecuente realizar conversiones de un **Array a String**. Para ello se aplica el método **join** al array.
+Es frecuente realizar conversiones de un **Array a String**. Para ello se aplica el método **join** al array. El método join recibe una cadena de texto como separador.
 
 ```javascript
 var array = ['Tierra', 'Mar', 'Aire'];
@@ -199,7 +199,7 @@ Si el método join no recibe ningún parámetro entonces la separación se reali
 
 **split**
 
-También es frecuente realizar conversiones de un **String a Array**. Para ello se aplica el método **split** al string.
+También es frecuente realizar conversiones de un **String a Array**. Para ello se aplica el método **split** al string. El método split recibe una cadena de texto como separador.
 
 ```javascript
 var texto = 'Tierra y Mar y Aire';
